--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource-variable/jost": "^5.1.1",
+    "@fontsource/jost": "^5.1.1",
+    "@midudev/tailwind-animations": "^0.1.0",
     "astro": "^4.16.13",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
