--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@midudev/tailwind-animations": "^0.1.0",
     "astro": "^4.16.13",
     "tailwindcss": "^3.4.15",
+    "three": "^0.170.0",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/three": "^0.170.0"
   }
 }
